terraform-codes/launch_template.tf
# Launch templates are managed by EKS node groups

  name = "eks-2ecc05ed-1f40-964e-63ef-7d37607e9280"

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv4_prefix_count  = "0"
    ipv6_address_count = "0"
    ipv6_prefix_count  = "0"
    network_card_index = "0"
    security_groups    = ["sg-09c0a3bf75b21cb6b"]
  }

  region = "ap-northeast-2"

  tags = {
    "eks:cluster-name"   = "test-eks-cluster"
    "eks:nodegroup-name" = "test-eks-cluster-nodegroup"
  }

  tags_all = {
    "eks:cluster-name"   = "test-eks-cluster"
    "eks:nodegroup-name" = "test-eks-cluster-nodegroup"
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVVJDVkVORFFXVXlaMEYzU1VKQlowbEpUMnM0UkVJcmVXOXZaVzkzUkZGWlNrdHZXa2xvZG1OT1FWRkZURUpSUVhkR1ZFVlVUVUpGUjBFeFZVVUtRWGhOUzJFelZtbGFXRXAxV2xoU2JHTjZRV1ZHZHpCNVRsUkJNMDFVVlhkTlZGVTFUVlJrWVVaM01IcE9WRUV6VFZSTmQwMXFRVEJOVkdSaFRVS [...]
}

resource "aws_launch_template" "test_launch_template" {
  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination      = "true"
      iops                       = "0"
      # throughput                 = "0"
      # volume_initialization_rate = "0"
      volume_size                = "20"
      volume_type                = "gp2"
    }
  }

  default_version         = "1"
  disable_api_stop        = "false"
  disable_api_termination = "false"

#   iam_instance_profile {
#     name = "eks-2ecc05ed-1f40-964e-63ef-7d37607e9280"
#   }

  image_id      = "ami-0b1b1d655c19afc82"
  instance_type = "t3a.medium"

  metadata_options {
    http_put_response_hop_limit = "2"
    instance_metadata_tags      = "disabled"
  }

  name = "eks-2ecc05ed-1f40-964e-63ef-7d37607e9280"

  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv4_prefix_count  = "0"
    ipv6_address_count = "0"
    ipv6_prefix_count  = "0"
    network_card_index = "0"
    security_groups    = ["sg-09c0a3bf75b21cb6b"]
  }

  region = "ap-northeast-2"

  tags = {
    "eks:cluster-name"   = "test-eks-cluster"
    "eks:nodegroup-name" = "test-eks-cluster-nodegroup"
  }

  tags_all = {
    "eks:cluster-name"   = "test-eks-cluster"
    "eks:nodegroup-name" = "test-eks-cluster-nodegroup"
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVVJDVkVORFFXVXlaMEYzU1VKQlowbEpUMnM0UkVJcmVXOXZaVzkzUkZGWlNrdHZXa2xvZG1OT1FWRkZURUpSUVhkR1ZFVlVUVUpGUjBFeFZVVUtRWGhOUzJFelZtbGFXRXAxV2xoU2JHTjZRV1ZHZHpCNVRsUkJNMDFVVlhkTlZGVTFUVlJrWVVaM01IcE9WRUV6VFZSTmQwMXFRVEJOVkdSaFRVS [...]
}
